--- a/deps/node-crypt/package.json
+++ b/deps/node-crypt/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "crypt",
 	"author": "Ben Trask <bentrask@comcast.net>",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
-		"preinstall": "node-waf configure",
-		"install": "node-waf build"
+		"install": "node-gyp rebuild"
 	},
-	"main": "build/default/crypt",
-	"engines": ["node"],
+	"main": "./build/default/crypt.node",
+	"engines": {
+		"node": ">=0.6.14"
+	}
 }
